Be gone compilation errors